--- a/css/styles.css
+++ b/css/styles.css
@@ -15,10 +15,5 @@ h1{
 }
 /*Seletores de Classe*/
 .logomarca{
-    background-color: blueviolet
-}
-/*Intercalando Seletores*/
-
-#footer p .logomarca{
-    color: darkorange
+    background-color:yellow
 }
