--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,4 @@
-/*
-Personalizando Links
-*/
-a{
-    color: blueviolet;    
-}
-a:hover{
-    color: yellow;        
-}
-a:active{
-    color: aquamarine;    
-}
-input:focus{
-    color: greenyellow;
-}
-div:focus-within{
-    background-color: gray;
-}
-
-h1:hover{
-    background-color: blue;   
+body{
+    padding: 20px
 }
 
