--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,10 +1,18 @@
-a[class*="btn"] {
+a[class*="btn"],
+input[class*="btn"] {
     display: inline-block;
     background-color: rgba(79, 29, 80, 0.08);
     text-decoration: none;
     padding: 10px 20px;
     border-radius: 10px;
-    color: brown
+    color: brown;
+    border: none;
+    cursor: pointer;
+}
+
+a[class*="btn"]:hover,
+.btn:hover {
+    transition: all .5s ease;
 }
 
 .btn.btn-red {
